--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Proyecto_Nuevo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Proyecto_Nuevo" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -16,8 +16,6 @@
 
 
     <style name="SplashTheme" parent="Theme.Proyecto_Nuevo">
-    <item
-        name="android:windowBackground">@drawable/splashscreen
-    </item>
+    <item name="android:windowBackground">@drawable/splashscreen</item>
     </style>
 </resources>
