--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -81,7 +81,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/design_default_color_on_primary"
-                android:text="Registrar" />
+                android:text="Registrar"
+                android:onClick="Registrar"/>
 
             <Space
                 android:layout_width="wrap_content"
